unpackaged/main/default/objects/Opportunity/fields/Adv_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Adv_Invoice_Number__c</fullName>
    <defaultValue>"CW"</defaultValue>
    <description>One or several invoice numbers, beginning with "CW."</description>
    <label>Adv Invoice Number</label>
    <type>TextArea</type>
</CustomField>