unpackaged/main/default/objects/Opportunity/fields/Balance_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Balance_Due_Date__c</fullName>
    <label>Balance Due Date</label>
    <type>Date</type>
</CustomField>