unpackaged/main/default/objects/Opportunity/fields/Campaign_Source_List_View__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Source_List_View__c</fullName>
    <description>Used to filter list views for Opportunities by Primary Campaign Source.</description>
    <formula>Campaign.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to filter list views for Opportunities by Primary Campaign Source.</inlineHelpText>
    <label>Campaign Source List View</label>
    <type>Text</type>
</CustomField>