unpackaged/main/default/objects/Opportunity/fields/Close_Date_is_YTD_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_is_YTD_Last_Year__c</fullName>
    <formula>IF(
AND(
YEAR(CloseDate)=YEAR(TODAY())-1,
CloseDate&lt;=DATE(Year(TODAY())-1,Month(TODAY()), Day(TODAY()))
),
TRUE, FALSE)</formula>
    <label>Close Date is YTD Last Year?</label>
    <type>Checkbox</type>
</CustomField>