unpackaged/main/default/objects/Opportunity/fields/Closed_Won_Via_Email__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Via_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed Won Via Email</label>
    <type>Checkbox</type>
</CustomField>