unpackaged/main/default/objects/Opportunity/fields/Commission_Paid_On__c.field-meta.xml
<CustomField>
    <fullName>Commission_Paid_On__c</fullName>
    <label>Commission Paid On</label>
    <type>Date</type>
</CustomField>