unpackaged/main/default/objects/Opportunity/fields/CW_OrderID__c.field-meta.xml
<CustomField>
    <fullName>CW_OrderID__c</fullName>
    <description>The original ID from CW's database</description>
    <label>CW OrderID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>