unpackaged/main/default/objects/Opportunity/fields/CW_UserID__c.field-meta.xml
<CustomField>
    <fullName>CW_UserID__c</fullName>
    <description>The original userID assigned to this opportunity by Compliance Week</description>
    <label>CW UserID</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>