unpackaged/main/default/objects/Opportunity/fields/Days_Past_Due_1__c.field-meta.xml
<CustomField>
    <fullName>Days_Past_Due_1__c</fullName>
    <formula>IF( ISNULL(Payment_1_Received__c) , TODAY() - Payment_1_Due__c , Null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Past Due 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>