unpackaged/main/default/objects/Opportunity/fields/Days_Past_Due_2__c.field-meta.xml
<CustomField>
    <fullName>Days_Past_Due_2__c</fullName>
    <formula>IF ( ISNULL(Payment_2_Due__c) , Null , IF ( ISNULL(Payment_2_Received__c) , TODAY() - Payment_2_Due__c , Null ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Past Due 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>