unpackaged/main/default/objects/Opportunity/fields/Days_Since_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Close_Date__c</fullName>
    <formula>TODAY()- CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Close Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>