unpackaged/main/default/objects/Opportunity/fields/Discount_Monetary__c.field-meta.xml
<CustomField>
    <fullName>Discount_Monetary__c</fullName>
    <formula>IF(ISPICKVAL(Business_Type__c, "Upgrade"), null, Total_Rate_Card_Price__c -  Amount)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>