unpackaged/main/default/objects/Opportunity/fields/Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percent__c</fullName>
    <formula>IF(Discount_Monetary__c &gt; 0,(Discount_Monetary__c / Total_Rate_Card_Price__c),null)</formula>
    <label>Discount (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>