unpackaged/main/default/objects/Opportunity/fields/Email_Invoice_to__c.field-meta.xml
<CustomField>
    <fullName>Email_Invoice_to__c</fullName>
    <inlineHelpText>What email address should the invoice be sent to?</inlineHelpText>
    <label>Email Invoice to</label>
    <type>Email</type>
</CustomField>