unpackaged/main/default/objects/Opportunity/fields/eStore_URL__c.field-meta.xml
<CustomField>
    <fullName>eStore_URL__c</fullName>
    <description>This URL links to the Wilmington store and pre-populates the store's payment form.</description>
    <label>eStore URL</label>
    <type>Url</type>
</CustomField>