unpackaged/main/default/objects/Opportunity/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <inlineHelpText>Expiration Date of current Subscription.</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>