unpackaged/main/default/objects/Opportunity/fields/Forecast_Term_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Term_Start_Date__c</fullName>
    <formula>Term_End_Date__c +1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Term Start Date</label>
    <type>Date</type>
</CustomField>