unpackaged/main/default/objects/Opportunity/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <displayFormat>S-{0}</displayFormat>
    <label>Invoice #</label>
    <type>AutoNumber</type>
</CustomField>