unpackaged/main/default/objects/Opportunity/fields/ItemID__c.field-meta.xml
<CustomField>
    <fullName>ItemID__c</fullName>
    <label>ItemID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>