unpackaged/main/default/objects/Opportunity/fields/Legacy_SalesforceID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_SalesforceID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Legacy SalesforceID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>