unpackaged/main/default/objects/Opportunity/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Lost on Price</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>Low Usage</fullName>
            </value>
            <value>
                <fullName>No Longer in Role</fullName>
            </value>
            <value>
                <fullName>Service Not Required</fullName>
            </value>
            <value>
                <fullName>Company has Multi</fullName>
            </value>
            <value>
                <fullName>Renewal Opportunity Expired</fullName>
            </value>
            <value>
                <fullName>Declined Renewal</fullName>
            </value>
            <value>
                <fullName>Recapture Opportunity Expired</fullName>
            </value>
            <value>
                <fullName>Schedule Conflict</fullName>
            </value>
            <value>
                <fullName>Travel Freeze</fullName>
            </value>
            <value>
                <fullName>Write Off</fullName>
            </value>
            <value>
                <fullName>Not a Qualified Opportunity</fullName>
            </value>
            <value>
                <fullName>No Reply/No Response</fullName>
            </value>
            <value>
                <fullName>Opportunity Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>