unpackaged/main/default/objects/Opportunity/fields/Months_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Months_Remaining__c</fullName>
    <formula>if((ROUND(Term_Length__c -(( Today() -  Term_Start_Month__c  )/30.41667),0)&gt; Term_Length__c ), Term_Length__c ,(ROUND(Term_Length__c -(( Today() -  Term_Start_Month__c )/30.41667),0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Months Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>