unpackaged/main/default/objects/Opportunity/fields/Months_Remaining_From_Specific_Date__c.field-meta.xml
<CustomField>
    <fullName>Months_Remaining_From_Specific_Date__c</fullName>
    <formula>if((ROUND(Term_Length__c -(( Date(2010,1,21) - Term_Start_Month__c )/30.41667),0)&gt; Term_Length__c ), Term_Length__c ,(ROUND(Term_Length__c -(( Date(2010,1,21) - Term_Start_Month__c )/30.41667),0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Months Remaining From Specific Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>