unpackaged/main/default/objects/Opportunity/fields/New_Sales__c.field-meta.xml
<CustomField>
    <fullName>New_Sales__c</fullName>
    <formula>IF( Recovery__c ,Amount,IF(ISPICKVAL(Type ,"CW: Single New"), Amount ,IF(ISPICKVAL(Type ,"CW: Multi New"), Amount ,IF(ISPICKVAL(Type ,"CW: Upgrade"), Amount ,0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New/Recovery Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>