unpackaged/main/default/objects/Opportunity/fields/No_of_Products__c.field-meta.xml
<CustomField>
    <fullName>No_of_Products__c</fullName>
    <label>No. of Products</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>