unpackaged/main/default/objects/Opportunity/fields/No_of_Sync_d_Quotes__c.field-meta.xml
<CustomField>
    <fullName>No_of_Sync_d_Quotes__c</fullName>
    <label>No. of Sync'd Quotes</label>
    <summaryFilterItems>
        <field>Quote.IsSyncing</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>