unpackaged/main/default/objects/Opportunity/fields/Offer_Code__c.field-meta.xml
<CustomField>
    <fullName>Offer_Code__c</fullName>
    <label>Offer Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>