unpackaged/main/default/objects/Opportunity/fields/OnBrand_Qualified__c.field-meta.xml
<CustomField>
    <fullName>OnBrand_Qualified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes that this Opportunity originated from a Lead Qualified by Onbrand.</description>
    <inlineHelpText>Denotes that this Opportunity originated from a Lead Qualified by Onbrand.</inlineHelpText>
    <label>OnBrand Qualified</label>
    <type>Checkbox</type>
</CustomField>