unpackaged/main/default/objects/Opportunity/fields/Order_1_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_1_ID__c</fullName>
    <description>Order 1 identifier from Advance, Authorize.Net, Cvent, or CyberSource.</description>
    <label>Order 1 ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>