unpackaged/main/default/objects/Opportunity/fields/Order_2_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_2_ID__c</fullName>
    <label>Order 2 ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>