unpackaged/main/default/objects/Opportunity/fields/Origination__c.field-meta.xml
<CustomField>
    <fullName>Origination__c</fullName>
    <description>Where the transaction came from.</description>
    <label>Origination</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cvent</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
                <default>true</default>
                <label>Website</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>