unpackaged/main/default/objects/Opportunity/fields/Paid_Status__c.field-meta.xml
<CustomField>
    <fullName>Paid_Status__c</fullName>
    <formula>IF ( Amount = 0, TRUE, IF ( Payment_Balance__c = 0 , TRUE , FALSE ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid Status</label>
    <type>Checkbox</type>
</CustomField>