unpackaged/main/default/objects/Opportunity/fields/Partial_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Partial_Amount_Received__c</fullName>
    <label>Partial Amount Received</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>