unpackaged/main/default/objects/Opportunity/fields/Partial_Payment_OK__c.field-meta.xml
<CustomField>
    <fullName>Partial_Payment_OK__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partial Payment OK?</label>
    <type>Checkbox</type>
</CustomField>