unpackaged/main/default/objects/Opportunity/fields/PayDateDiff__c.field-meta.xml
<CustomField>
    <fullName>PayDateDiff__c</fullName>
    <formula>Payment_Date__c - CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PayDateDiff</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>