unpackaged/main/default/objects/Opportunity/fields/Payment_1_Due__c.field-meta.xml
<CustomField>
    <fullName>Payment_1_Due__c</fullName>
    <label>Payment 1 Due</label>
    <type>Date</type>
</CustomField>