unpackaged/main/default/objects/Opportunity/fields/Payment_1_Factor__c.field-meta.xml
<CustomField>
    <fullName>Payment_1_Factor__c</fullName>
    <formula>IF( ISBLANK ( Payment_1_Received__c) , 0, 1 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment 1 Factor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>