unpackaged/main/default/objects/Opportunity/fields/Payment_1_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_1_Method__c</fullName>
    <label>Payment 1 Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amex</fullName>
                <label>AmEx</label>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
            <value>
                <fullName>Mastercard</fullName>
            </value>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>Wire</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>