unpackaged/main/default/objects/Opportunity/fields/Payment_1_Received__c.field-meta.xml
<CustomField>
    <fullName>Payment_1_Received__c</fullName>
    <label>Payment 1 Received</label>
    <type>Date</type>
</CustomField>