unpackaged/main/default/objects/Opportunity/fields/Payment_2_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_2_Amount__c</fullName>
    <label>Payment 2 Amount</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>