unpackaged/main/default/objects/Opportunity/fields/Payment_2_Due__c.field-meta.xml
<CustomField>
    <fullName>Payment_2_Due__c</fullName>
    <label>Payment 2 Due</label>
    <type>Date</type>
</CustomField>