unpackaged/main/default/objects/Opportunity/fields/Payment_2_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_2_Method__c</fullName>
    <label>Payment 2 Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Visa/MC</fullName>
            </value>
            <value>
                <fullName>AmEx</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Wire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>