unpackaged/main/default/objects/Opportunity/fields/Payment_2_Portal__c.field-meta.xml
<CustomField>
    <fullName>Payment_2_Portal__c</fullName>
    <label>Payment 2 Portal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADvance</fullName>
            </value>
            <value>
                <fullName>Authorize.Net</fullName>
            </value>
            <value>
                <fullName>Cvent</fullName>
            </value>
            <value>
                <fullName>CyberSource</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>