unpackaged/main/default/objects/Opportunity/fields/Payment_2_Received__c.field-meta.xml
<CustomField>
    <fullName>Payment_2_Received__c</fullName>
    <label>Payment 2 Received</label>
    <type>Date</type>
</CustomField>