unpackaged/main/default/objects/Opportunity/fields/Payment_2_Reference__c.field-meta.xml
<CustomField>
    <fullName>Payment_2_Reference__c</fullName>
    <inlineHelpText>Check # / Last 4 CC Digits</inlineHelpText>
    <label>Payment 2 Reference</label>
    <length>15</length>
    <type>Text</type>
</CustomField>