unpackaged/main/default/objects/Opportunity/fields/Payment_Balance__c.field-meta.xml
<CustomField>
    <fullName>Payment_Balance__c</fullName>
    <formula>Amount - ( Payment_1_Amount__c * Payment_1_Factor__c + Payment_2_Amount__c * Payment_2_Factor__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>