unpackaged/main/default/objects/Opportunity/fields/Payment_Reference__c.field-meta.xml
<CustomField>
    <fullName>Payment_Reference__c</fullName>
    <description>Check number or last four digits of credit card</description>
    <label>Check # / Last 4 Digits</label>
    <length>15</length>
    <type>Text</type>
</CustomField>