unpackaged/main/default/objects/Opportunity/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <formula>IF( Transaction_Paid__c,IF(ISPICKVAL( Payment_Method__c , "Check"),"Check",IF(ISPICKVAL( Payment_Method__c , "Credit Card"),"Credit Card",IF(ISPICKVAL( Payment_Method__c , "Amex"),"Amex",IF(ISPICKVAL( Payment_Method__c , "Visa/MC"),"Visa/MC","Accounts Receivable")))),"Accounts Receivable")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Status</label>
    <type>Text</type>
</CustomField>