unpackaged/main/default/objects/Opportunity/fields/Price_Book_Entry_ID__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Entry_ID__c</fullName>
    <label>Price Book Entry ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>