unpackaged/main/default/objects/Opportunity/fields/Process_Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>Process_Credit_Card__c</fullName>
    <formula>Hyperlink("http://complianceweek.com/contact/sf_dsp_form_credit_card.cfm?CardHoldersName="&amp;Name,"Process Credit Card")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process Credit Card</label>
    <type>Text</type>
</CustomField>