unpackaged/main/default/objects/Opportunity/fields/Processing_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Processing_Instructions__c</fullName>
    <label>Processing Instructions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>