unpackaged/main/default/objects/Opportunity/fields/Products_with_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Products_with_Expiry_Date__c</fullName>
    <label>Products with Expiry Date</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Expiry_Date__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>