unpackaged/main/default/objects/Opportunity/fields/Recovery__c.field-meta.xml
<CustomField>
    <fullName>Recovery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recovery?</label>
    <type>Checkbox</type>
</CustomField>