unpackaged/main/default/objects/Opportunity/fields/Remove_from_Billing_Emails__c.field-meta.xml
<CustomField>
    <fullName>Remove_from_Billing_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove from Billing Emails</label>
    <type>Checkbox</type>
</CustomField>