unpackaged/main/default/objects/Opportunity/fields/Remove_from_Engagement_Email_Automation__c.field-meta.xml
<CustomField>
    <fullName>Remove_from_Engagement_Email_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Removes records from receiving automated engagement email messaging.</description>
    <inlineHelpText>Removes records from receiving automated engagement email messaging.</inlineHelpText>
    <label>Remove from Engagement Email Automation</label>
    <type>Checkbox</type>
</CustomField>