unpackaged/main/default/objects/Opportunity/fields/Remove_from_Renewal_Automation__c.field-meta.xml
<CustomField>
    <fullName>Remove_from_Renewal_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This cancels the Renewal Automated messaging being sent to the Contact.</description>
    <inlineHelpText>This cancels the Renewal Automated messaging being sent to the Contact.</inlineHelpText>
    <label>Remove from Renewal Automation</label>
    <type>Checkbox</type>
</CustomField>